# Biometric-Door-Locking-System

./: FIngerprintkeypadled.ino  Fingerandkeypad.ino  README.md  admin.ino  admin1.ino  package-lock.json  package.json
Arduino Demo Codes/: Demo2.cpp  demo.ino
C Codes/: Display.c  FingerPrint.c  Keypad.c  Led.c  Project.c  RTC Clock
C Codes/FingerPrint/: .cproject  .project  sdkconfig.old
C Codes/Fingerprint_System/: .cproject  .project  CMakeLists.txt
C Codes/Fingerprint_System/main/: CMakeLists.txt  main.c
C Codes/OLED/main/: CMakeLists.txt  main.c
C Codes/OLED/main/oled/: oled.c  (+4 more)
C Codes/Project_Test/: .project
C Codes/Project_Test_Buzzer/: .project
C Codes/Project_Test_FingerPrint/: .project
C Codes/Project_Test_Firebase/: .cproject  .project
C Codes/Project_Test_Keypad/: .cproject  .project
C Codes/Project_Test_LED/: .cproject
C Codes/Project_Test_RTC/: .cproject  .project
C_Codes_Espressif_IDE_5.3/Fingerprint_System/: .cproject
C_Codes_Espressif_IDE_5.3/Fingerprint_System/main/: CMakeLists.txt  main.c
C_Codes_Espressif_IDE_5.3/Project_Test/: .cproject
C_Codes_Espressif_IDE_5.3/Project_Test_Buzzer/: .cproject
C_Codes_Espressif_IDE_5.3/Project_Test_FingerPrint/: .cproject  CMakeLists.txt
C_Codes_Espressif_IDE_5.3/Project_Test_LED/: .project
C_Codes_Espressif_IDE_5.3/Project_Test_Oled/: .cproject  .project
my-keypad/main/: keypad.c  keypad.h  main.c
src/: AboutPage.jsx  AdminController.jsx  App.js  LogTable.jsx  LoginPage.jsx  Navbar.jsx  firebase.js  main.jsx  style.css
src/components/: AttendanceSystem.jsx  MainPage.jsx
(+35 files in other folders)
